cmake_minimum_required(VERSION 3.2 FATAL_ERROR)

project(csPDF-dev)

file(MAKE_DIRECTORY
  ${CMAKE_CURRENT_BINARY_DIR}/bin
  ${CMAKE_CURRENT_BINARY_DIR}/lib
  )

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib CACHE PATH "" FORCE)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib CACHE PATH "" FORCE)
set(CMAKE_PDB_OUTPUT_DIRECTORY     ${CMAKE_CURRENT_BINARY_DIR}/bin CACHE PATH "" FORCE)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin CACHE PATH "" FORCE)

add_subdirectory(csPDF)
